Read data from firebase

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
 
 .leaderboard {
   font-family: Arial, sans-serif;
-  max-width: 600px;
+  max-width: 900px;
+  min-width: 750px;
   margin: 0 auto;
   padding: 20px;
   background-color: #f0f0f0;
@@ -27,16 +28,15 @@ ul {
 
 .leaderboard-item {
   display: flex;
-  justify-content: space-between;
+  align-items: center; /* Ensure vertical alignment is centered, if needed */
+  justify-content: space-between; /* Keeps items spaced out */
   padding: 10px;
   margin-bottom: 8px;
   background-color: #fff;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-.name {
-  color: chocolate;
-}
+
 .rank,
 .name,
 .time {
@@ -44,14 +44,21 @@ ul {
 }
 
 .rank {
-  color: #007bff;
+  /* Flex item to align rank to the left */
+  margin-right: auto; /* Pushes everything else to the right */
+  color: black;
 }
 
 .name {
+  /* Center the name with flexbox */
   flex-grow: 1;
   text-align: center;
+  color: chocolate;
+  max-width: 4rem;
 }
 
 .time {
+  /* Flex item to align time to the right */
+  margin-left: auto; /* Pushes everything else to the left */
   color: #28a745;
 }
