--- a/src/App.css
+++ b/src/App.css
@@ -5,63 +5,6 @@
   text-align: center;
 }
 
-.leaderboard {
-  font-family: Arial, sans-serif;
-  max-width: 900px;
-  min-width: 750px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f0f0f0;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.leaderboard h1 {
-  text-align: center;
-  color: #333;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-.leaderboard-item {
-  display: flex;
-  align-items: center; /* Ensure vertical alignment is centered, if needed */
-  justify-content: space-between; /* Keeps items spaced out */
-  padding: 10px;
-  margin-bottom: 8px;
-  background-color: #fff;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.rank,
-.name,
-.time {
-  font-weight: bold;
-}
-
-.rank {
-  /* Flex item to align rank to the left */
-  margin-right: auto; /* Pushes everything else to the right */
-  color: black;
-  min-width: 3rem;
-}
-
-.name {
-  /* Center the name with flexbox */
-  flex-grow: 1;
-  text-align: left;
-  padding-left: 15rem;
-  color: chocolate;
-  /* max-width: 4rem; */
-}
-
-.time {
-  /* Flex item to align time to the right */
-  margin-left: auto; /* Pushes everything else to the left */
-  color: #28a745;
-  min-width: 3rem;
+.mainWrapper {
+  margin-top: 3rem;
 }
