--- a/src/components/CardComponent/CardComponent.css
+++ b/src/components/CardComponent/CardComponent.css
@@ -3,12 +3,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 15rem;
-  height: 10rem;
+  width: 16rem;
   background-color: #485965;
   border-radius: 6%;
   padding: 1rem;
   transition: transform 0.3s ease, opacity 0.3s ease;
+  align-items: center;
 }
 .cardWrapper:hover {
   transform: scale(1.1);
@@ -23,7 +23,9 @@
 
 .playerName {
   font-size: 2rem;
+  margin-bottom: 0.5rem;
 }
 .playerBirthday {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
+  margin-bottom: 0.5rem;
 }
